--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   right:
     - text: "About"
       href: about.html
+    - text: "Prob2"
+      href: plotly.html
     - icon: fa-envelope fa-lg
       href: mailto:<yz3738@cumc.columbia.edu>
     - icon: fa-github fa-lg
